--- a/contrib/terraform/aws/us-lenovo.env
+++ b/contrib/terraform/aws/us-lenovo.env
@@ -1,4 +1,4 @@
-export AWS_ACCESS_KEY_ID="AKIAIJLBQRH5UEYR4TJA"
-export AWS_SECRET_ACCESS_KEY="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"
+export AWS_ACCESS_KEY_ID=XXXXXXXXXXX
+export AWS_SECRET_ACCESS_KEY=XXXXXXXXXXXXX
 export AWS_SSH_KEY_NAME="kubespray"
 export AWS_DEFAULT_REGION="us-west-1"
