--- a/contrib/terraform/aws/us-west-1.env
+++ b/contrib/terraform/aws/us-west-1.env
@@ -1,4 +1,4 @@
 export AWS_ACCESS_KEY_ID=""
 export AWS_SECRET_ACCESS_KEY=""
-export AWS_SSH_KEY_NAME="kubespray"
+export AWS_SSH_KEY_NAME=""
 export AWS_DEFAULT_REGION="us-west-1"
