--- a/contrib/terraform/aws-us/cn-northwest-1.env
+++ b/contrib/terraform/aws-us/cn-northwest-1.env
@@ -1,4 +1,4 @@
 export AWS_ACCESS_KEY_ID=XXXXXXX
 export AWS_SECRET_ACCESS_KEY=XXXXXXX
-export AWS_SSH_KEY_NAME="kubespray"
+export AWS_SSH_KEY_NAME=""
 export AWS_DEFAULT_REGION="cn-northwest-1"
